# ota_http_server

./: README.md  build.py  config.toml  http_server.py  ota_db.toml  ota_start.bat  pyproject.toml  tokens.json
certs/: gen  gen.bat  server_ext.cnf
src/ota_http_server/: __init__.py
src/ota_http_server/cli/: app.py
src/ota_http_server/core/: __init__.py  app_runner.py  config.py  server.py
src/ota_http_server/logger/: __init__.py  logger_module.py
tests/core/: test_utilities.py
www/: data.txt
